--- a/guidaemacsauctex.sty
+++ b/guidaemacsauctex.sty
@@ -10,7 +10,7 @@
 %% alla pagina Internet http://creativecommons.org/licenses/by-nc-sa/3.0/it
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{guidaemacsauctex}[2013/03/08 v.1.0 Preambolo di guidaemacsauctex.tex]
+\ProvidesPackage{guidaemacsauctex}[2013/03/11 v.1.0 Preambolo di guidaemacsauctex.tex]
 
 \RequirePackage{ccicons}
 \RequirePackage{booktabs}
@@ -75,7 +75,7 @@
   colorlinks=true,%
 ]{hyperref}
 \hypersetup{%
-  pdftitle   = {Guida pratica all'uso di GNU Emacs \& AUCTeX},%
+  pdftitle   = {Guida pratica all'uso di GNU Emacs e AUCTeX},%
   pdfauthor  = {Mosè Giordano, Orlando Iovino, Matteo Leccardi},%
   pdfsubject = {Guida tematica all'uso di GNU Emacs e AUCTeX su Windows, GNU Linux e Mac OS},%
   pdfkeywords = {GNU, Emacs, AUCTeX, LaTeX, TeX, GuIT},%
